[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-soc2box"
version = "0.1.1"
description = "SOC 2 evidence collector and control tracker, self-hosted"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "compliance", "soc2box"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/soc2box"

[project.scripts]
"soc2box-emit" = "soc2box.connect:emit_main"
soc2box = "soc2box.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["soc2box"]
